--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,15 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+# use flag -DSANITIZE_ADDRESS=on to build with address sanitizer 
 find_package(Sanitizers)
+
+set(COMMON_LIBS
+	json_generator
+	gtest
+	glog
+	gflags
+	jansson)
 
 add_library(json_generator
 	json_gen.cpp
@@ -17,14 +25,15 @@ add_sanitizers(json_generator)
 add_executable(json_gen
 	json_util.cpp)
 
+target_link_libraries(json_gen
+	${COMMON_LIBS})
+
+add_sanitizers(json_gen)
+
 add_executable(test-gen
 	test.cpp)
 
 target_link_libraries(test-gen
-	json_generator
-	gtest
-	glog
-	gflags
-	jansson)
+	${COMMON_LIBS})
 
 add_sanitizers(test-gen)
